--- a/Lab_2_Types_of_Graphs.ipynb
+++ b/Lab_2_Types_of_Graphs.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Lab 2- Types of Graphs.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNGzvzPuRmHJyo9DQN1zm6h",
+      "authorship_tag": "ABX9TyN+FKMWTWd7FGPyFG4EHGZQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -225,7 +225,7 @@
         "colab_type": "text"
       },
       "source": [
-        "![alt text](https://github.com/szb5874/SRA268-SP20/blob/master/images/Sheet%202%20(2).pdf)"
+        "![alt text](https://github.com/szb5874/SRA268-SP20/blob/master/images/Sheet%206.pdf)"
       ]
     },
     {
@@ -246,6 +246,16 @@
       },
       "source": [
         "This graph shows us how the total of points scored for winning teams has changed over time."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "qUAAi4_rH5sX",
+        "colab_type": "text"
+      },
+      "source": [
+        ""
       ]
     },
     {
